// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisclosureContainer should render the provided children 1`] = `
<InjectIntl(ApplicationErrorBoundary)>
  <ApplicationLoadingOverlayProvider>
    <ApplicationStatusOverlayProvider>
<ContextProvider
  value={
    DisclosureManagerDelegateInstance {
      "registerDismissCheck": [Function],
    }
  }
>
  <InjectIntl(ApplicationErrorBoundary)>
    <ApplicationLoadingOverlayProvider>
      <withPromptRegistration(NavigationPromptCheckpoint)>
        <div>
          Test Child
        </div>
      </withPromptRegistration(NavigationPromptCheckpoint)>
    </ApplicationStatusOverlayProvider>
  </ApplicationLoadingOverlayProvider>
</InjectIntl(ApplicationErrorBoundary)>
`;

exports[`DisclosureContainer should render the provided children 2`] = `
<InjectIntl(ApplicationErrorBoundary)>
  <ApplicationLoadingOverlayProvider>
    <ApplicationStatusOverlayProvider>
      <withPromptRegistration(NavigationPromptCheckpoint)>
        <div>
          Test Child
        </div>
      </withPromptRegistration(NavigationPromptCheckpoint)>
    </ApplicationStatusOverlayProvider>
  </ApplicationLoadingOverlayProvider>
</InjectIntl(ApplicationErrorBoundary)>
    </ApplicationLoadingOverlayProvider>
  </InjectIntl(ApplicationErrorBoundary)>
</ContextProvider>
`;
